Añadimos tabla y archivo README

--- a/index.html
+++ b/index.html
@@ -8,6 +8,44 @@
     <link rel="stylesheet" href="style.css"> <!-- Referenciamos el .css  -->
 </head>
 <body>
-    
+    <table class="Datos">
+<tr>
+    <th>N° de socio</th>
+    <th>Apellidos</th>
+    <th>Nombres</th>
+    <th>Ciudad</th>
+    <th>Fecha Inicio</th>
+
+</tr>
+<tr>
+    <td>2421</td>
+    <td>Pérez Martinez</td>
+    <td>Juan José</td>
+    <td>Portoviejo</td>
+    <td>2022-11-01</td>
+</tr>
+<tr>
+    <td>4438</td>
+    <td>Martínez Gómez</td>
+    <td>María Beatriz</td>
+    <td>Manta</td>
+    <td>2022-01-01</td>
+</tr>
+<tr>
+    <td>4334</td>
+    <td>Gómez Rodríguez</td>
+    <td>Carlos Alberto</td>
+    <td>Chone</td>
+    <td>2022-05-01</td>
+</tr>
+<tr>
+    <td>4523</td>
+    <td>Rodríguez Moreno</td>
+    <td>Sofía Ana</td>
+    <td>Bahía</td>
+    <td>2022-02-01</td>
+</tr>
+
+    </table>
 </body>
 </html>
