Estilizamos la tabla

--- a/index.html
+++ b/index.html
@@ -8,8 +8,9 @@
     <link rel="stylesheet" href="style.css"> <!-- Referenciamos el .css  -->
 </head>
 <body>
+<div class="Tabla1">
     <table class="Datos">
-<tr>
+<tr class="titulo">
     <th>N° de socio</th>
     <th>Apellidos</th>
     <th>Nombres</th>
@@ -47,5 +48,6 @@
 </tr>
 
     </table>
+</div>
 </body>
-</html>
+</html
