--- a/index.html
+++ b/index.html
@@ -48,6 +48,21 @@
 </tr>
 
     </table>
+
+</div class="Formulario">
+<div>
+    <form action="guardar.php" method="post" enctype="multipart/form">
+        <input type="text" name="Nombres">
+        <input type="text" name="Apellidos">
+        <input type="text" name="Ciudad">
+        <input type="date" name="Fecha Inicio">
+        <input type="file" name="Foto">
+        <input type="file" name="Comprobante pago">
+
+
+
+
+    </form>
 </div>
 </body>
 </html
